add input to add fields

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "ag-grid-community": "^20.2.0",
+    "ag-grid-enterprise": "^20.2.0",
     "ag-grid-react": "^20.2.0",
     "chance": "^1.0.18",
     "node-sass": "^4.12.0",
